# IS-2021-prog-1-sem

./: .gitignore  README.md
.github/workflows/: test.yml
life/: .gitignore  Makefile  hash_set.c  hash_set.h  libbmp.c  libbmp.h  liblife.c  liblife.h  life.c
life/include/: liblife.h
life/lib/: hash_set.c  libbmp.c  liblife.c
life/src/: life.c
log-analysis/: log-analysis.c
mp3-meta/: libid3v2.c  libid3v2.h  log.txt  mp3meta  mp3meta.c
uint1024_t/: Makefile  tests.c  uint1024.c  uint1024.h
uint1024_t/gtests/: CMakeLists.txt  run.sh  tests.cpp
word-count/: word-count.c
